[gd_scene load_steps=3 format=3 uid="uid://q8sihi7v4m2r"]

[ext_resource type="FontFile" uid="uid://cojsua2s34upb" path="res://textures/fonts/Better VCR 9.0.1.ttf" id="1_l2cnm"]
[ext_resource type="Script" uid="uid://qx238ob2xrep" path="res://scenes/game_over_screen/game_over_screen.gd" id="1_wndrr"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wndrr")

[node name="GameOver" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_l2cnm")
theme_override_font_sizes/font_size = 35
text = "Game Over"

[node name="ContinueLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = 50.0
offset_right = 20.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_l2cnm")
theme_override_font_sizes/font_size = 20
text = "Press \"space\" to restart the game"

[node name="Node2D" type="Node2D" parent="."]

[node name="DeathTimer" type="Timer" parent="Node2D"]

[node name="BlinkTimer" type="Timer" parent="Node2D"]
wait_time = 0.5

[connection signal="timeout" from="Node2D/DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="Node2D/BlinkTimer" to="." method="_on_blink_timer_timeout"]
